# Mopidy-Curses

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
curl/: clear-queue.sh  next.sh  pause.sh  play-uri.sh  play.sh  previous.sh  search-album.sh  state.sh  track.sh
dialog/: main-menu.sh
mopidy_curses/: __init__.py  ext.conf
mopidy_curses/frontend/: CursesFrontend.py
