[tool.poetry]
name = "mopidy-curses"
version = "0.1.0"
description = "Curses front-end for Mopidy"
authors = ["Wouter Doeland <wouter@wouterdoeland.nl>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
setuptools = "^45.2.0"
mopidy = "^3.0.1"
pykka = "^2.0.2"
urwid = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
